# PlaylistMaker

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  fly.toml  pyproject.toml
src/song2vec/: __init__.py  config.py  download_mpd.py  export.py  generate.py  ingest.py  parse.py  server.py  spotify.py  train.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  SoundBackground.jsx  index.css
